--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@types/express": "4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
